kubernetes/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          ports:
            - containerPort: 5672
            - containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: ampq
      port: 5672         # The port the service will be exposed on
      targetPort: 5672   # The port on which RabbitMQ is running inside the container
    - name: management
      port: 15672        # The port the service will be exposed on for the management interface
      targetPort: 15672  # The port on which the management interface is running inside the container
