kubernetes/mssc-gateway-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mssc-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mssc-gateway
                port:
                  number: 9090
